<resources>
    <string name="app_name">先知风水</string>
    <string name="title_activity_login">登录</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_login_edit_username">请输入账号</string>
    <string name="hint_login_edit_password">请输入密码</string>
    <string name="text_login_btn">登录</string>
    <string name="text_login_forget_psd">忘记密码</string>
    <string name="text_login_sign">立即注册</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="text_index_home_tab">首页</string>
    <string name="text_index_discover_tab">发现</string>
    <string name="text_index_shop_tab">商城</string>
    <string name="text_index_mine_tab">我</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hot">最火</string>
    <string name="text_local">本地</string>
    <string name="text_all">全部</string>
    <string name="text_collect">收藏</string>
    <string name="text_my_master">我的大师</string>
    <string name="text_my_lecture">我的讲座</string>
    <string name="text_my_topic">我的话题</string>
    <string name="text_become_master">成为大师</string>
    <string name="text_help_and_feedback">帮助与反馈</string>
    <string name="text_setting">设置</string>

</resources>
