<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_dark"
    android:paddingTop="10px"
    android:paddingBottom="10px">
    <TextView
        android:id="@+id/btn_index_home"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_index_home_icon"
        android:drawablePadding="5px"
        android:textSize="24px"
        android:textColor="@drawable/selector_index_tab_text_color"
        android:text="@string/text_index_home_tab"/>
    <TextView
        android:id="@+id/btn_index_discover"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_index_discover_icon"
        android:drawablePadding="5px"
        android:textSize="24px"
        android:textColor="@drawable/selector_index_tab_text_color"
        android:text="@string/text_index_discover_tab"/>
    <TextView
        android:id="@+id/btn_index_shop"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_index_shop_icon"
        android:drawablePadding="5px"
        android:textSize="24px"
        android:textColor="@drawable/selector_index_tab_text_color"
        android:text="@string/text_index_shop_tab"/>
    <TextView
        android:id="@+id/btn_index_mine"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_index_mine_icon"
        android:drawablePadding="5px"
        android:textSize="24px"
        android:textColor="@drawable/selector_index_tab_text_color"
        android:text="@string/text_index_mine_tab"/>
</LinearLayout>