<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xianzhifengshui.ui.index.home.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64px"
        android:gravity="center"
        android:background="@color/white_dark"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_master_list_hot"
            android:layout_width="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/text_hot"/>
        <TextView
            android:id="@+id/btn_master_list_local"
            android:layout_width="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/text_local"/>
        <TextView
            android:id="@+id/btn_master_list_all"
            android:layout_width="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/text_all"/>
    </LinearLayout>
    <com.xianzhifengshui.widget.pull2refresh.PullToRefreshRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        />
</LinearLayout>
