<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_login_horizontal_margin"
    android:paddingLeft="@dimen/activity_login_horizontal_margin"
    tools:context="com.xianzhifengshui.ui.login.LoginActivity">
    <LinearLayout
        android:id="@+id/layout_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:background="@drawable/selector_commen_btn"
            android:src="@drawable/commen_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_largest"
            android:layout_marginLeft="32px"
            android:text="@string/text_login_btn"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edit_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_login_title"
        android:layout_marginTop="220px"
        android:minHeight="52px"
        android:singleLine="true"
        android:textSize="@dimen/text_size_small"
        android:gravity="bottom"
        android:paddingLeft="26px"
        android:background="@drawable/shape_white_gray_line"
        android:hint="@string/hint_login_edit_username"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edit_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username_login"
        android:layout_marginTop="68px"
        android:textSize="@dimen/text_size_small"
        android:gravity="bottom"
        android:minHeight="52px"
        android:paddingLeft="26px"
        android:background="@drawable/shape_white_gray_line"
        android:hint="@string/hint_login_edit_password"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:background="@drawable/selector_orange_btn"
        android:gravity="center"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"
        android:text="@string/text_login_btn"
        android:layout_below="@id/edit_password_login"
        android:layout_marginTop="60px"/>
    <TextView
        android:id="@+id/btn_login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/orange"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="24px"
        android:layout_marginLeft="20px"
        android:text="@string/text_login_forget_psd"
        />
    <TextView
        android:id="@+id/btn_login_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/orange"
        android:layout_alignBaseline="@+id/btn_login_forget_pwd"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20px"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="24px"
        android:layout_marginLeft="20px"
        android:text="@string/text_login_sign"
        />
</RelativeLayout>






