<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.xianzhifengshui.ui.index.home.HomeFragment">
    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_base_toolbar"/>
    <com.xianzhifengshui.widget.auto.AutoScrollView
        android:layout_below="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/btn_mine_login"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14px"
                android:background="@drawable/selector_commen_btn"
                android:paddingTop="20px"
                android:paddingBottom="20px"
                android:paddingLeft="40px"
                android:paddingRight="40px">
                <com.xianzhifengshui.widget.CircleImageView
                    android:id="@+id/image_mine_avatar"
                    android:layout_width="160px"
                    android:layout_height="160px"
                    app:layout_auto_baseheight="width"
                    android:src="@drawable/avatar_not_login_icon"
                    />
                <ImageView
                    android:layout_width="23px"
                    android:layout_height="39px"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right_icon"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="56px"
                    android:layout_toRightOf="@id/image_mine_avatar">
                    <TextView
                        android:id="@+id/text_mine_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:text="点击登陆"
                        />
                    <TextView
                        android:id="@+id/text_mine_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_size_small"
                        android:layout_marginTop="18px"
                        android:layout_below="@id/text_mine_nick_name"
                        android:text="登陆更精彩哦~"
                        />

                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_mine_my_master"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:background="@drawable/selector_commen_btn"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                android:layout_marginTop="8px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_my_master"/>
                <ImageView
                    android:layout_width="16px"
                    android:layout_height="30px"
                    android:src="@drawable/arrow_right_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_commen_btn"
                android:paddingRight="40px"
                android:paddingLeft="40px">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spline_height_normal"
                    android:background="@color/spline_color"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_mine_my_lecture"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:background="@drawable/selector_commen_btn"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_my_lecture"/>
                <ImageView
                    android:layout_width="16px"
                    android:layout_height="30px"
                    android:src="@drawable/arrow_right_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_commen_btn"
                android:paddingRight="40px"
                android:paddingLeft="40px">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spline_height_normal"
                    android:background="@color/spline_color"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_mine_my_topic"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:background="@drawable/selector_commen_btn"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_my_topic"/>
                <ImageView
                    android:layout_width="16px"
                    android:layout_height="30px"
                    android:src="@drawable/arrow_right_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_mine_become_master"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:background="@drawable/selector_commen_btn"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                android:layout_marginTop="8px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_become_master"/>
                <ImageView
                    android:layout_width="16px"
                    android:layout_height="30px"
                    android:src="@drawable/arrow_right_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_mine_help"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:background="@drawable/selector_commen_btn"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                android:layout_marginTop="8px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_help_and_feedback"/>
                <ImageView
                    android:layout_width="16px"
                    android:layout_height="30px"
                    android:src="@drawable/arrow_right_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_commen_btn"
                android:paddingRight="40px"
                android:paddingLeft="40px">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spline_height_normal"
                    android:background="@color/spline_color"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_mine_setting"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:background="@drawable/selector_commen_btn"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_setting"/>
                <ImageView
                    android:layout_width="16px"
                    android:layout_height="30px"
                    android:src="@drawable/arrow_right_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
        </LinearLayout>

    </com.xianzhifengshui.widget.auto.AutoScrollView>



</RelativeLayout>
